php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #34565 mb_send_mail does not fetch mail.force_extra_parameters
Submitted: 2005-09-20 16:11 UTC Modified: 2005-09-21 15:23 UTC
From: Bjorn dot Wiberg at its dot uu dot se Assigned:
Status: Closed Package: mbstring related
PHP Version: 5.1.0RC1 OS: AIX 5.2.0 ML5
Private report: No CVE-ID: None
 [2005-09-20 16:11 UTC] Bjorn dot Wiberg at its dot uu dot se
Description:
------------
Note: This also happens with PHP 5.0.5.

mb_send_mail() does not fetch and/or use the mail.force_extra_parameters from httpd.conf, despite the documentation stating that it is a wrapper around mail() (which does fetch and use those extra parameters):

/../ "mb_send_mail() is wrapper function of mail(). See mail() for details." /../


Reproduce code:
---------------
<?php
  $from = 'my@address.com';
  $to = 'my@address.com';
  $subject = 'Hi!';
  $body = 'Hi,\n\nHow are you?';
  mb_language("uni");
  $status = mb_send_mail($to, $subject, $body);
?>

Corresponding httpd.conf entry:

  php_admin_value mail.force_extra_parameters "-t -f webmaster@mysite.com"


Expected result:
----------------
That the mail.force_extra_parameters are automatically used.

Actual result:
--------------
The mail.force_extra_parameters are not used. This may cause problems with the sendmail program if it expects those parameters.

One has to fetch the parameters with ini_get('mail.force_extra_parameters') and feed it to mb_send_mail() like this:

  $status = mb_send_mail($to, $subject, $body, '', ini_get('mail.force_extra_parameters'));

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-09-21 15:23 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC