Fixed bug #34565 (mb_send_mail does not fetch mail.force_extra_parameters)